--- a/WeConnect/appsettings.json
+++ b/WeConnect/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ApplicationDbContextConnection": "Data Source=localhost;Database=weconnect;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+  }
 }
