added migrations and custom user

--- a/WeConnect/appsettings.json
+++ b/WeConnect/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ApplicationDbContextConnection": "Data Source=localhost;Database=weconnect;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+    "ApplicationDbContextConnection": "Data Source=localhost;Database=weconnect_db;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
   }
 }
